# staging-crm

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  docker-compose.yml  pyproject.toml
crm/configs/: __init__.py  urls.py
crm/configs/settings/: common.py  local.py  staging.py
crm/home/: apps.py  celery.py  permissions.py  urls.py  utils.py
crm/home/extensions/sendinblue/: __init__.py  client.py  mailing.py
crm/home/management/commands/: initialize_data.py
crm/home/management/data/: data.json
crm/home/migrations/: 0001_initial.py  0002_initial.py  0003_billing_file.py
crm/home/models/: __init__.py  account.py  base.py  billing.py  client.py  contact.py  interaction.py  kyc.py  opportunity.py  partner.py  product.py
crm/home/serializers/: __init__.py  account.py  billing.py  client.py  contact.py  dashboard.py  file.py  interaction.py  kyc.py  opportunity.py  partner.py  product.py
crm/home/templates/mailing/: der.html
crm/home/views/: __init__.py  account.py  billing.py  client.py  contact.py  dashboard.py  file.py  health.py  interaction.py  kyc.py  opportunity.py  partner.py  product.py
crm/users/: models.py  serializers.py  urls.py  views.py
crm/users/migrations/: 0001_initial.py
crm/users/tests/: factories.py  tests.py
deployment/local/backend/: Dockerfile  entrypoint.sh  start
deployment/local/worker/: Dockerfile  start
deployment/test/: Dockerfile  entrypoint.sh
